# constants/endpoint.go
@@ -2,5 +2,5 @@ package constants
 
 const (
 	STORAGE_ENDPOINT_UPLOAD   = "/storage/upload"
-	STORAGE_ENDPOINT_DOWNLOAD = "/storage/download"
+	STORAGE_ENDPOINT_DOWNLOAD = "/storage/download/:file_name"
 )
