# internal/storage/models/blob.go
@@ -2,14 +2,22 @@ package models
 
 import "mime/multipart"
 
-type UploadRequest struct {
-	SessionId string                `json:"id"`
-	File      *multipart.FileHeader `json:"file"`
+type UploadBlobRequest struct {
+	SessionId string
+	File      *multipart.FileHeader
 }
 
-type UploadResponse struct {
-	Url      string `json:"url"`
-	Token    string `json:"token"`
-	Ext      string `json:"ext"`
-	FileName string `json:"file_name"`
+type UploadBlobResponse struct {
+	Url      string
+	Token    string
+	Ext      string
+	FileName string
+}
+
+type DownloadSASRequest struct {
+	FileName string
+}
+
+type DownloadSASResponse struct {
+	Url string
 }
