# internal/storage/models/storage.go
@@ -1,76 +1,31 @@
-// Đặt tên biến, tên hàm phải sát với ý nghĩa, chức năng.
-// Không gán cứng các giá trị số và chuỗi. Nên đặt tên, sử dụng constants để truyền đạt giá trị và ý nghĩa của biến.
-
 package models
 
-import (
-	"medioa/constants"
-	commonModel "medioa/models"
-	"strings"
-	"time"
+import "mime/multipart"
 
-	"github.com/google/uuid"
-)
-
-type RequestParams struct {
-	commonModel.RequestParams
-	ConfigQuery int
-	Id          int
-	DownloadUrl string
-	Type        string
-	Token       string
-	LifeTime    int
-	CreatedBy   int
+type UploadRequest struct {
+	SessionId string                `json:"id"`
+	File      *multipart.FileHeader `json:"file"`
 }
 
-func (r *RequestParams) trimSpace() {
-	r.DownloadUrl = strings.TrimSpace(r.DownloadUrl)
-	r.Type = strings.TrimSpace(r.Type)
-	r.Token = strings.TrimSpace(r.Token)
-}
-func (r *RequestParams) ToMap() map[string]interface{} {
-	r.trimSpace()
-
-	if strings.ToLower(r.OrderBy) != constants.SORT_ORDER_ASC {
-		r.OrderBy = constants.SORT_ORDER_DESC
-	}
-	return map[string]interface{}{
-		constants.FIELD_STORAGE_ID:           r.Id,
-		constants.FIELD_STORAGE_DOWNLOAD_URL: r.DownloadUrl,
-		constants.FIELD_STORAGE_TYPE:         r.Type,
-		constants.FIELD_STORAGE_TOKEN:        r.Token,
-		constants.FIELD_STORAGE_LIFE_TIME:    r.LifeTime,
-		constants.FIELD_STORAGE_CREATED_BY:   r.CreatedBy,
-		constants.FIELD_PAGE:                 r.Page,
-		constants.FIELD_SIZE:                 r.Size,
-		constants.FIELD_ORDER_BY:             r.OrderBy,
-		constants.FIELD_SORT_BY:              r.SortBy,
-		constants.FIELD_SORT_MULTIPLE:        r.SortMultiple,
+func (r *UploadRequest) ToBlobRequest() *UploadBlobRequest {
+	return &UploadBlobRequest{
+		SessionId: r.SessionId,
+		File:      r.File,
 	}
 }
 
-type Response struct {
-	Id          int64     `json:"id"`
-	DownloadUrl string    `json:"download_url"`
-	Type        string    `json:"type"`
-	Token       string    `json:"token"`
-	LifeTime    int       `json:"life_time"`
-	CreatedBy   int64     `json:"created_by"`
-	CreatedAt   time.Time `json:"created_at"`
+type UploadResponse struct {
+	Url      string `json:"url"`
+	Token    string `json:"token"`
+	Ext      string `json:"ext"`
+	FileName string `json:"file_name"` // review to remove later
 }
 
-type SaveRequest struct {
-	Id          int64
-	UUID        uuid.UUID
-	DownloadUrl string
-	Type        string
-	Token       string
-	LifeTime    int
-	CreatedBy   int64
-	CreatedAt   time.Time
+type DownloadRequest struct {
+	FileName string `json:"file_name"`
+	Token    string `json:"token"`
 }
 
-type ListPaging struct {
-	commonModel.ListPaging
-	Records []*Response
+type DownloadResponse struct {
+	Url string `json:"url"`
 }
